--- a/views/gameGround.hbs
+++ b/views/gameGround.hbs
@@ -1,40 +1,101 @@
+<script defer src="/js/gamelogic.js"></script>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-8">
-      <div id="playground" class="w-75 h-75 p-3 fixed-top bg-dark">
-        1
-      </div>
-      {{!-- d-flex  row bg-white --}}
-      <div id="carouselExampleControls" name="cards" class="carousel slide w-75 p-3 h-25 fixed-bottom bg-secondary"
-        data-ride="carousel">
-        <div class="carousel-inner ">
-          <div class="carousel-item active d-flex justify-content-center">
-            <img src="img/test-img.jpg" class="ml-3 rounded" style="width: 7%; height: 160px" alt="...">
-            <img src="img/test-img.jpg" class="ml-3 rounded" style="width: 7%; height: 160px" alt="...">
+    <div id="gamecol" class="col-8">
+      <div id="playground" class=" h-75 p-3 fixed-top bg-dark">
+
+        <div class="wrapper 1-col p-3">
+          <div class="card-holder m-3 bg-success">
 
           </div>
-          <div class="carousel-item d-flex justify-content-center">
-            <img src="img/test-img.jpg" class="ml-3 rounded" style="width: 7%; height: 160px" alt="...">
-            <img src="img/test-img.jpg" class="ml-3 rounded" style="width: 7%; height: 160px" alt="...">
+          <div class="card-holder m-3 bg-success">
 
           </div>
-          <div class="carousel-item d-flex justify-content-center">
-            <img src="img/test-img.jpg" class="ml-3 rounded" style="width: 7%; height: 160px" alt="...">
-            <img src="img/test-img.jpg" class="ml-3 rounded" style="width: 7%; height: 160px" alt="...">
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+          <div class="card-holder m-3 bg-success">
+
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+
+        <div class="wrapper 2-col p-3">
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+          <div class="card-holder m-3 bg-success">
+
+          </div>
+        </div>
+      </div>
+      <div id="demo" class="carousel slide  p-3 h-25 fixed-bottom bg-secondary" data-ride="carousel"
+        data-interval="10000000">
+        <div class="container carousel-inner no-padding ">
+          <div class="carousel-item active ">
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3">
+              <img src="img/test-img.jpg">1
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
         </a>
       </div>
     </div>
-    <div class="col-4 vh-100 bg-success">
-
+    <div data-spy="scroll" data-target="#list-example" data-offset="0"
+      class="scrollspy-example col-4 p-3 min-vh-100 bg-secondary">
+      <div class="d-flex justify-content-center p-3 ml-5">
+        <img src="img/test-img.jpg" style="width: 30%; heigth: 50%">
+      </div>
+      <div class="d-flex justify-content-center p-3 ml-5">
+        <img src="img/test-img.jpg" style="width: 30%; heigth: 50%">
+      </div>
+      <div class="d-flex justify-content-center p-3 ml-5">
+        <img src="img/test-img.jpg" style="width: 30%; heigth: 50%">
+      </div>
+      <div class="d-flex justify-content-center p-3 ml-5">
+        <img src="img/test-img.jpg" style="width: 30%; heigth: 50%">
+      </div>
     </div>
   </div>
 
