--- a/views/gameGround.hbs
+++ b/views/gameGround.hbs
@@ -43,17 +43,17 @@
       <div id="demo" class="carousel slide  p-3 h-25 fixed-bottom bg-secondary" data-ride="carousel"
         data-interval="10000000">
         <div class="container carousel-inner no-padding ">
-          <div class="carousel-item active ">
-            <div class="col-xs-3 col-sm-3 col-md-3">
+          <div class="carousel-item active">
+            <div class="img-holder col-xs-3 col-sm-3 col-md-3">
               <img src="img/test-img.jpg">
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3">
+            <div class="img-holder col-xs-3 col-sm-3 col-md-3">
               <img src="img/test-img.jpg">
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3">
+            <div class="img-holder col-xs-3 col-sm-3 col-md-3">
               <img src="img/test-img.jpg">
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3">
+            <div class="img-holder col-xs-3 col-sm-3 col-md-3">
               <img src="img/test-img.jpg">
             </div>
           </div>
@@ -68,7 +68,7 @@
               <img src="img/test-img.jpg">
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3">
-              <img src="img/test-img.jpg">1
+              <img src="img/test-img.jpg">
             </div>
           </div>
         </div>
@@ -98,5 +98,4 @@
       </div>
     </div>
   </div>
-
 </div>
