--- a/views/gameGround.hbs
+++ b/views/gameGround.hbs
@@ -49,15 +49,15 @@
 
           <div class="carousel-item active ">
             {{#each picturePath1}}
-            <div class="img-holder col-xs-3 col-sm-3 col-md-3">
-              <img class="imgScroll1" src='{{this}}'>
+            <div class="img-holder m-3 bg-light col-xs-3 col-sm-3 col-md-3">
+              <img class="imgScroll1" src='{{this}}' alt="no picture">
             </div>
             {{/each}}
           </div>
           <div class="carousel-item">
-             {{#each picturePath2}}
-            <div class="col-xs-3 col-sm-3 col-md-3">
-              <img class="imgScroll2" src='{{this}}'>
+            {{#each picturePath2}}
+            <div class="img-holder m-3 bg-light col-xs-3 col-sm-3 col-md-3">
+              <img class="imgScroll2" src='{{this}}' alt="no picture">
             </div>
             {{/each}}
           </div>
@@ -76,7 +76,7 @@
     <div id="vertScroll" data-spy="scroll" data-target="#list-example" data-offset="0"
       class="scrollspy-example col-4 p-3 min-vh-100 bg-secondary">
       <div class="d-flex justify-content-center p-3 ml-5">
-        <img src='{{coverPath}}' style="width: 30%; heigth: 50%">
+        <img id={{deck1Id}} src='{{coverPath}}' style="width: 30%; heigth: 50%">
       </div>
       <div class="d-flex justify-content-center p-3 ml-5">
         <img id={{deck2Id}} src='{{coverPath2}}' style="width: 30%; heigth: 50%">
@@ -91,4 +91,3 @@
   </div>
 
 </div>
-
