--- a/views/errors.hbs
+++ b/views/errors.hbs
@@ -1,1 +1,4 @@
-<h1>Регистрация не удалась!</h1>
+<div class="fullScreen">
+  <img class="centerImage" src="/img/error-404-page.jpg">
+  <h2>Something went wrong</h2>
+</div>
