--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,3 +7,5 @@
   <button type="submit">Submit</button>
 
 </form>
+
+<a href="/auth/vkontakte"><img class="vkPngLogin" src="/img/vkontakte_PNG23.png"></a>
