--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,21 @@ body {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
+
+.fullScreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.centerImage {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.vkPngLogin {
+  width: 50px;
+}
