fix import bug and drop out bug

--- a/views/gameGround.hbs
+++ b/views/gameGround.hbs
@@ -1,5 +1,5 @@
-<script defer src="/js/gamelogic.js"></script>
-<script defer src="/js/chooseDeck.js"></script>
+<script defer src="/js/gamelogic.js" type="module"></script>
+<script defer src="/js/chooseDeck.js" type="module"></script>
 <div class="container-fluid">
   <div class="row">
     <div id="gamecol" class="col-8">
