--- a/views/gameGround.hbs
+++ b/views/gameGround.hbs
@@ -4,40 +4,26 @@
   <div class="row">
     <div id="gamecol" class="col-8">
       <div id="playground" class=" h-75 p-3 fixed-top bg-dark">
-
-        <div class="wrapper 1-col p-3">
-          <div class="card-holder m-3 bg-success">
-
+        <div class="row">
+          <div class="col">
+            <a class=""><img src="/img/icons/camera.png" alt=""></a>
+            <a class=""><img src="/img/icons/delete.png" alt=""></a>
           </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-        </div>
-
-        <div class="wrapper 2-col p-3">
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
-          </div>
-          <div class="card-holder m-3 bg-success">
-
+          <div class="col-11 playground-2">
+            <div class="wrapper 1-col p-3">
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+            </div>
+            <div class="wrapper 2-col p-3">
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+              <div class="card-holder m-3 bg-success"></div>
+            </div>
           </div>
         </div>
       </div>
