--- a/views/errors.hbs
+++ b/views/errors.hbs
@@ -1,1 +1,3 @@
 <h1>Регистрация не удалась!</h1>
+
+<a href="/registration"><button id="signupBtn" type="submit">Вернуться к регистрации</button></a>
