--- a/views/registrationForm.hbs
+++ b/views/registrationForm.hbs
@@ -1,3 +1,4 @@
+<h2>Форма регистрации:</h2>
 <script defer src="/js/index.js"></script>
 <form id="regForm", name="regForm", method="POST", action="/registration">
   <label>Name: <input type="text", name="userName", id="username"></label>
