--- a/views/gameGround.hbs
+++ b/views/gameGround.hbs
@@ -5,9 +5,13 @@
     <div id="gamecol" class="col-8">
       <div id="playground" class=" h-75 p-3 fixed-top bg-dark">
         <div class="row">
-          <div class="col">
-            <a class=""><img src="/img/icons/camera.png" alt=""></a>
-            <a class=""><img src="/img/icons/delete.png" alt=""></a>
+          <div class="col toolscontainer">
+            <div class="camera">
+              <a href="/call"><img src="/img/icons/camera.png" alt=""></a>
+            </div>
+            <div id="trashCan">
+              <img id="trashIcon" src="/img/icons/delete.png" alt="">
+            </div>
           </div>
           <div id="playground-2" class="col-11 ">
             <div class="wrapper 1-col p-3">
