--- a/views/call.hbs
+++ b/views/call.hbs
@@ -1,3 +1,5 @@
+{{!-- Если оба звонящих находятся за NAT-ом звонок не пройдет.
+Для того, чтобы преодолеть эту преграду, необходимо при создании объекта peer указать TURN-сервер --}}
 
    <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
 
