--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,11 +1,12 @@
 <script defer src="/js/login.js"></script>
+<div class="container justify-item-center min-vh-100 d-flex" >
 
 <form action="/user" method="post" id="LoginForm">
 
-  <input type="text" name="userEmail" id="userEmail" placeholder="e-mail" required>
-  <input type="password" name="userPassword" id="userPassword" placeholder="password" required>
+  <input type="text" name="userEmail" id="userEmail" placeholder="e-mail" required> <br>
+  <input type="password" name="userPassword" id="userPassword" placeholder="password" required> <br>
   <button type="submit">Submit</button>
 
 </form>
 
-<a href="/auth/vkontakte"><img class="vkPngLogin" src="/img/vkontakte_PNG23.png"></a>
+</div>
